# pc-navtex-py

./: .gitignore  CHANGES.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
pc-navtex-py/: __main__.py  navtex_db.py  navtex_message.py  navtex_serial.py  version.py
pc_navtex_py/: __init__.py  __main__.py  navtex_db.py  navtex_serial.py  version.py
pcnavtexpy/: app_tk.py  navtex.db  navtex_db.py  navtex_message.py  navtex_serial.py
scripts/: 0_pypi_setuptools.sh  1_pypi_run.sh
